--- a/debian/rules
+++ b/debian/rules
@@ -4,10 +4,11 @@ DRMMODES = exynos pl111 kirin sunxi
 COMMON_CONFIGURE_FLAGS = $(shell dpkg-buildflags --export=configure)
 
 %:
-	dh $@ --with autoreconf,quilt,xsf
+	dh $@ --with autoreconf,xsf
 
 # create m4 directory before running autoreconf
 override_dh_autoreconf:
+	dh_quilt_patch
 	mkdir -p m4
 	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
 
@@ -15,6 +16,7 @@ override_dh_autoreconf:
 override_dh_autoreconf_clean:
 	dh_autoreconf_clean
 	rm -rf m4
+	dh_quilt_unpatch
 
 override_dh_auto_configure: $(DRMMODES:%=doconfigure-%)
 
