--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,7 +41,9 @@ armsoc_drv_la_LDFLAGS = -module -avoid-version -no-undefined
 armsoc_drv_la_LIBADD = @XORG_LIBS@
 armsoc_drv_ladir = @moduledir@/drivers
 DRMMODE_SRCS = drmmode_exynos/drmmode_exynos.c \
-	drmmode_pl111/drmmode_pl111.c
+	drmmode_pl111/drmmode_pl111.c \
+	drmmode_kirin/drmmode_kirin.c \
+	drmmode_sunxi/drmmode_sunxi.c 
 
 
 armsoc_drv_la_SOURCES = \
